[package]
name = "interior_mutability_pointer"
version = "0.3.3"
edition = "2021"
readme = "readme.md"
license = "MIT"
license-file = "LICENSE"
documentation = "https://docs.rs/interior_mutability_pointer/"
homepage = "https://github.com/samhamnam/interior_mutability_pointer"
repository = "https://github.com/samhamnam/interior_mutability_pointer"
keywords = ["utility", "memory", "pointer", "interior_mutability", "cell"]
categories = ["rust-patterns"]

description = "A wrapper around `Rc<RefCell<T>>` allowing immediate access to inner methods."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
compile_failure = []